traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:11: error: type mismatch;
 found   : Unit
 required: Boolean
    print (t1&&t2)
          ^